# scrapy-aiohttp

./: .coverage  LICENSE  README.md  coverage.json  pyproject.toml  requirements.txt
.github/workflows/: publish.yaml  test.yaml
scrapy_aiohttp/: __init__.py  middleware.py  request.py  server.py
scrapy_aiohttp/utils/: __init__.py  constants.py  exceptions.py
tests/: test_middleware.py  test_request.py  test_server.py
utils/: __init__.py  constants.py  exeptions.py  simple_spider.py  types.py
