[tool.poetry]
name = "aiohttpmiddleware"
version = "0.1.0"
description = ""
authors = ["ArtemSerdechnyi <serdechnyi.art@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.0"
aiohttp = "^3.8.6"
coverage = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
