[tool.poetry]
name = "scrapy_aiohttp"
version = "0.1.2"
description = "Scrapy middleware for sending requests with aiohttp."
license = "BSD-3-Clause"
authors = ["Artem Serdechnyi <serdechnyi.art@gmail.com>"]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Scrapy",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.11.0"
aiohttp = "^3.8.6"
coverage = { version = "^7.3.2", extras = ["toml"] }

[tool.coverage.run]
source = ["scrapy_aiohttp"]

[tool.coverage.json]
pretty_print = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
